--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "dom"
     ],
     "paths": {
-      "angular2-image-upload": [
+      "bb2s-image-upload": [
         "dist"
       ]
     }
